# gbfr-logs

./: .gitignore  package-lock.json  package.json
src/: i18n.ts  types.ts
src-hook/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/lang/zh-CN/: ui.json
src-tauri/src/: main.rs
src-tauri/src/db/: logs.rs  mod.rs
src-tauri/src/parser/: constants.rs
src-tauri/src/parser/v1/: mod.rs  skill_state.rs
src/assets/: skill-groups.ts
src/components/: SkillGroupRow.tsx  SkillRow.tsx  Titlebar.tsx  useSkillBreakdown.ts
