[package]
name = "gbfr-logs"
version = "1.8.0"
description = "GBFR Logs"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
dll-syringe = "0.17.1"
futures = "0.3"
interprocess = { version = "^2.0", features = ["tokio"] }
protocol = { path = "../protocol" }
sea-query = { version = "0.32.7"}
sea-query-rusqlite = { version = "0.7.0", features = ["with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [ "devtools", "tray-icon", "image-png"] }
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-window-state = { version = "2" }
tauri-plugin-log = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1.15"
num_enum = "0.7.2"
chrono = "0.4"
rusqlite = { version = "0.32.0", features = ["bundled"] }
rusqlite_migration = "1.3.1"
zstd = "0.13.0"
strum = "0.28"
strum_macros = "0.28"
cbor4ii = { version = "0.3.3", features = ["use_std", "serde1"] }
log = "^0.4"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10"
